# post-comments

./: .env_example  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  serializer.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializer.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py  0003_alter_user_password.py  0004_alter_user_email.py
